add BulLoad data info as a result
